Add generator; move library to netstandard2.0

--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Log1\Log1.csproj" />
+    <ProjectReference Include="..\Log1\Log1.csproj" OutputItemType="Analyzer" />
   </ItemGroup>
 
   <ItemGroup>
