--- a/ConsoleApp1/appSettings.json
+++ b/ConsoleApp1/appSettings.json
@@ -1,7 +1,5 @@
 {
     "Log1": {
-        "Log1.MyService.ConditionalLogging": {
-            "a": 1
-        }
+        "Log1.MyService.ConditionalLogging": "{ \"a\": 1 }"
     }
 }
