Fix configuration reader Generate files into namespace

--- a/ConsoleApp1/appSettings.json
+++ b/ConsoleApp1/appSettings.json
@@ -1,5 +1,5 @@
 {
     "Log1": {
-        "Log1.MyService.ConditionalLogging": "{ \"a\": 1 }"
+        "MyService<T>.ConditionalLogging": "{ \"a\": 1 }"
     }
 }
