Require a configuration to avoid spamming logs Default to `Debug` level logs

--- a/ConsoleApp1/appSettings.json
+++ b/ConsoleApp1/appSettings.json
@@ -1,5 +1,14 @@
 {
     "Log1": {
-        "MyService<T>.ConditionalLogging": "{ \"a\": 1 }"
+        "MyService<T>.ConditionalLogging": "{ \"a\": 1 }",
+        "MyService<T>.DoSomethingElse": "{}",
+        "MyService<T>.DoSomething<T1>": "{}"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Microsoft.Extensions.Hosting.Internal.Host": "Information"
+        }
     }
 }
