--- a/Log1/Log1.csproj
+++ b/Log1/Log1.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
 	<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+    <PackageDescription>This package adds support for customizing logging</PackageDescription>
+    <RepositoryUrl>https://github.com/Hosch250/Log1</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
