--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1.4.0
+      uses: actions/setup-dotnet@v3.0.3
       with:
         dotnet-version: '6.0.310'
 
@@ -30,8 +30,5 @@ jobs:
     - name: Pack
       run: dotnet pack -c Release
 
-    - name: GPR
-      run: dotnet tool install -g gpr
-
     - name: Push NuGet Package
-      run: gpr push Log1/bin/Release/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+      run: dotnet nuget push Log1/bin/Release/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
